# irtp

./: CMakeLists.txt  README.md  build.sh  config.json
src/: server.cpp
src/Entity/: Room.h
src/Utils/: Common.cpp  DatabaseLoader.cpp  DatabaseLoader.h
src/cli-tools/: cli-tools.cpp
src/libs/: Config.cpp  Config.h  Message.h  Socket.cpp  Socket.h
